Update index.html /imagens

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="menu">
             <div class="logo">
                 <a href="/index.html">
-                    <img src="/images/LOGO_VT_500x500.png" alt="VT_Midias" width="500" height="500">
+                    <img src="images/LOGO_VT_500x500.png" alt="VT_Midias" width="500" height="500">
                 </a>
             </div>
             <ul class="nav-links">
@@ -28,7 +28,7 @@
     <!-- Sección de Banner -->
     <div class="banner-section">
         <a href="/views/presupuesto.html" class="banner-link">
-            <img src="/images/image_pagina_web_1920x500.png" alt="Banner_de_la_Empresa" class="banner-img" width="1920" height="500">
+            <img src="images/image_pagina_web_1920x500.png" alt="Banner_de_la_Empresa" class="banner-img" width="1920" height="500">
         </a>
     </div>
 
@@ -40,7 +40,7 @@
                 En VT Mídias, somos un equipo de expertos en marketing digital comprometidos en ayudar a nuestros clientes a crecer y destacar en el mundo online. Con más de <strong>6 años</strong> de experiencia, hemos trabajado con empresas de diversos sectores, desarrollando estrategias innovadoras y personalizadas que generan resultados reales. Desde la gestión de publicidad paga hasta el diseño de sitios web optimizados, nuestra misión es ofrecer soluciones completas que maximicen el alcance y el impacto de tu negocio.
     </article>
     <div class="imagen-quien-somos">
-        <img src="/images/victor_pagina_web_1080x1080_uien_somos.png" alt="image_quien_somos" width="1080" height="1080">
+        <img src="images/victor_pagina_web_1080x1080_uien_somos.png" alt="image_quien_somos" width="1080" height="1080">
     </div>    
 </div>
         
@@ -101,10 +101,10 @@
         <section id="portifolio" class="seccion">
             <h2>Algunos de nuestros trabajos</h2>
             <div class="galeria">
-                <img src="/images/portifolio_1_1920x1080.png" alt="portifolio1_vtmidias" class="galeria-imagen" width="1920" height="1080">
-                <img src="/images/portifolio_2_1920x1080.png" alt="portifolio2_vtmidias" class="galeria-imagen" width="1920" height="1080">
-                <img src="/images/portifolio_3_1920x1080.png" alt="portifolio3_vtmidias" class="galeria-imagen" width="1920" height="1080">
-                <img src="/images/portifolio_4_1920x1080.png" alt="portifolio4_vtmidias" class="galeria-imagen" width="1920" height="1080">
+                <img src="images/portifolio_1_1920x1080.png" alt="portifolio1_vtmidias" class="galeria-imagen" width="1920" height="1080">
+                <img src="images/portifolio_2_1920x1080.png" alt="portifolio2_vtmidias" class="galeria-imagen" width="1920" height="1080">
+                <img src="images/portifolio_3_1920x1080.png" alt="portifolio3_vtmidias" class="galeria-imagen" width="1920" height="1080">
+                <img src="images/portifolio_4_1920x1080.png" alt="portifolio4_vtmidias" class="galeria-imagen" width="1920" height="1080">
               </div>
               
         </section>
@@ -114,13 +114,13 @@
         <div class="footer-contenedor">
             <div class="redes-sociales">
                 <a href="https://facebook.com" target="_blank" class="social-icon">
-                    <img src="/images/logotipo_meta2048x2048.png" alt="Facebook" width="2048" height="2048">
+                    <img src="images/logotipo_meta2048x2048.png" alt="Facebook" width="2048" height="2048">
                 </a>
                 <a href="https://youtube.com" target="_blank" class="social-icon">
-                    <img src="/images/logo_youtube_348x348.png" alt="youtube" width="348" height="348">
+                    <img src="images/logo_youtube_348x348.png" alt="youtube" width="348" height="348">
                 </a>
                 <a href="https://instagram.com" target="_blank" class="social-icon">
-                    <img src="/images/logo_ig_204x192.png" alt="Instagram" width="204" height="192">
+                    <img src="images/logo_ig_204x192.png" alt="Instagram" width="204" height="192">
                 </a>
             </div>
             <p class="direccion">Dirección: Calle Alcalá, 77 Madrid, España</p>
