--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="menu">
             <div class="logo">
                 <a href="/index.html">
-                    <img src="images/LOGO_VT_500x500.png" alt="VT_Midias" width="500" height="500">
+                    <img src="images/logovt_branco_500x500.png" alt="VT_Midias" width="500" height="500">
                 </a>
             </div>
             <ul class="nav-links">
