--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
     <header class="encabezado">
         <nav class="menu">
             <div class="logo">
-                <a href="/index.html">
+                <a href="./index.html">
                     <img src="images/logovt_branco_500x500.png" alt="VT_Midias" width="500" height="500">
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="/index.html">Home</a></li>
-                <li><a href="/views/portifolio.html">Portifolio</a></li>
-                <li><a href="/views/servicios.html">Servicios</a></li>
-                <li><a href="/views/presupuesto.html">Presupuesto</a></li>
-                <li><a href="/views/contacto.html">Contacto</a></li>
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./views/portifolio.html">Portifolio</a></li>
+                <li><a href="./views/servicios.html">Servicios</a></li>
+                <li><a href="./views/presupuesto.html">Presupuesto</a></li>
+                <li><a href="./views/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
 <main>
     <!-- Sección de Banner -->
     <div class="banner-section">
-        <a href="/views/presupuesto.html" class="banner-link">
+        <a href="./views/presupuesto.html" class="banner-link">
             <img src="images/image_pagina_web_1920x500.png" alt="Banner_de_la_Empresa" class="banner-img" width="1920" height="500">
         </a>
     </div>
