--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header class="encabezado">
         <nav class="menu">
             <div class="logo">
-                <a href="./index.html">
+                <a href="/index.html">
                     <img src="images/logovt_branco_500x500.png" alt="VT_Midias" width="500" height="500">
                 </a>
             </div>
             <ul class="nav-links">
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="./views/portifolio.html">Portifolio</a></li>
                 <li><a href="./views/servicios.html">Servicios</a></li>
                 <li><a href="./views/presupuesto.html">Presupuesto</a></li>
